# FinAgentFlow---Automated-Banking-Task-Orchestration

./: .env.example  .gitignore  README.md  main.py  project.ipynb  pyproject.toml  requirements.txt
app/: __init__.py
app/agents/: __init__.py  base.py  communication.py  compliance.py  reconciliation.py  registry.py
app/api/: __init__.py  app.py
app/api/routes/: artifacts.py  health.py  tasks.py  workflows.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/generation/: __init__.py  content_generator.py  prompts.py
app/models/: __init__.py  artifact.py  task.py  user.py  workflow.py
app/orchestration/: __init__.py  dependency_resolver.py  graph_builder.py  workflow_manager.py
app/storage/: __init__.py  artifact_store.py
data/samples/: bank_statement.json  ledger_transactions.json
frontend/: streamlit_app.py
scripts/: make_explainer_pdf.py
tests/: __init__.py  test_agents.py  test_dependency_resolver.py  test_integration.py  test_models.py
